# vote-wars

./: .env  Dockerfile  README.md  alembic.ini  database.py  docker-compose.yaml  enums.py  main.py  pyproject.toml
actions/: actions.py
alembic/: env.py
alembic/versions/: b91a3816e0c6_create_character_film_starship_and_.py
api/: routes.py  schemas.py
models/: __init__.py  associations.py  character.py  film.py  starship.py
repositories/: character.py  film.py  starship.py
scripts/: fill_database.py  queries.py
services/: swapi.py  types.py
tests/: conftest.py
tests/unit/: test_routes.py
